syntax = "proto3";

package database;

// ===========================================
// DATABASE SERVICE - gRPC API
// ===========================================

service DatabaseService {
  // === CONTENT ===
  rpc GetContent (GetContentRequest) returns (ContentResponse);
  rpc ListContent (ListContentRequest) returns (ListContentResponse);
  rpc CreateContent (CreateContentRequest) returns (ContentResponse);
  rpc UpdateContent (UpdateContentRequest) returns (ContentResponse);
  rpc GetLastContentForSource (GetLastContentForSourceRequest) returns (ContentResponse);
  rpc UpsertContentVector (UpsertContentVectorRequest) returns (UpsertContentVectorResponse);

  // === SOURCE ===
  rpc GetSource (GetSourceRequest) returns (SourceResponse);
  rpc GetSourceByExternalId (GetSourceByExternalIdRequest) returns (SourceResponse);
  rpc ListSources (ListSourcesRequest) returns (ListSourcesResponse);
  rpc CreateSource (CreateSourceRequest) returns (SourceResponse);
  rpc UpdateSource (UpdateSourceRequest) returns (SourceResponse);
  rpc SetSourceActive (SetSourceActiveRequest) returns (SourceResponse);
  rpc DeleteSource (DeleteSourceRequest) returns (Empty);

  // === TOPIC ===
  rpc GetTopic (GetTopicRequest) returns (TopicResponse);
  rpc ListTopics (ListTopicsRequest) returns (ListTopicsResponse);
  rpc CreateTopic (CreateTopicRequest) returns (TopicResponse);
  rpc UpdateTopic (UpdateTopicRequest) returns (TopicResponse);
  rpc AddContentToTopic (AddContentToTopicRequest) returns (TopicResponse);

  // === PUBLICATION ===
  rpc GetPublication (GetPublicationRequest) returns (PublicationResponse);
  rpc ListPublications (ListPublicationsRequest) returns (ListPublicationsResponse);
  rpc CreatePublication (CreatePublicationRequest) returns (PublicationResponse);
  rpc UpdatePublicationStatus (UpdatePublicationStatusRequest) returns (PublicationResponse);

  // === AI LOGS ===
  rpc CreateAiLog (CreateAiLogRequest) returns (AiLogResponse);

  // === SEARCH (Vector) ===
  rpc SearchSimilarContent (SearchSimilarRequest) returns (SearchSimilarResponse);
  rpc SearchSimilarTopics (SearchSimilarRequest) returns (SearchSimilarResponse);

  // === USER (Auth) ===
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc UpdateUserRefreshToken (UpdateUserRefreshTokenRequest) returns (UserResponse);
  rpc CountUsers (CountUsersRequest) returns (CountUsersResponse);

  // === WORKSPACE ===
  rpc GetWorkspace (GetWorkspaceRequest) returns (WorkspaceResponse);
  rpc ListWorkspaces (ListWorkspacesRequest) returns (ListWorkspacesResponse);
  rpc CreateWorkspace (CreateWorkspaceRequest) returns (WorkspaceResponse);
  rpc UpdateWorkspace (UpdateWorkspaceRequest) returns (WorkspaceResponse);
  rpc DeleteWorkspace (DeleteWorkspaceRequest) returns (Empty);
  rpc AddWorkspaceUser (AddWorkspaceUserRequest) returns (WorkspaceUserResponse);
  rpc RemoveWorkspaceUser (RemoveWorkspaceUserRequest) returns (Empty);
  rpc ListWorkspaceUsers (ListWorkspaceUsersRequest) returns (ListWorkspaceUsersResponse);

  // === WORKSPACE DONOR (Source â†” Workspace) ===
  rpc AddWorkspaceDonor (AddWorkspaceDonorRequest) returns (WorkspaceDonorResponse);
  rpc RemoveWorkspaceDonor (RemoveWorkspaceDonorRequest) returns (Empty);
  rpc ListWorkspaceDonors (ListWorkspaceDonorsRequest) returns (ListWorkspaceDonorsResponse);
  rpc UpdateWorkspaceDonor (UpdateWorkspaceDonorRequest) returns (WorkspaceDonorResponse);

  // === TARGET (Publication Channels) ===
  rpc GetTarget (GetTargetRequest) returns (TargetResponse);
  rpc ListTargets (ListTargetsRequest) returns (ListTargetsResponse);
  rpc CreateTarget (CreateTargetRequest) returns (TargetResponse);
  rpc UpdateTarget (UpdateTargetRequest) returns (TargetResponse);
  rpc DeleteTarget (DeleteTargetRequest) returns (Empty);
}

// ===========================================
// REQUESTS & RESPONSES
// ===========================================

// --- CONTENT ---

message ContentResponse {
  string id = 1;
  string external_id = 2;
  string text = 3;
  string source_id = 4;
  string received_via_id = 5;
  string qdrant_id = 6;
  bool is_vectorized = 7;
  string embedding_model = 8;
  string created_at = 9;
  string updated_at = 10;
  string raw_data_json = 11;
  string ai_analysis_json = 12;
}

message GetContentRequest {
  string id = 1;
}

message ListContentRequest {
  int32 limit = 1;
  int32 offset = 2;
  string source_id = 3;
  string status = 4; // 'pending', 'parsed', etc.
}

message ListContentResponse {
  repeated ContentResponse items = 1;
  int32 total = 2;
}

message CreateContentRequest {
  string external_id = 1;
  string source_id = 2;
  string text = 3;
  string raw_data_json = 4;
  string received_via_id = 5;
  string source_date = 6;
}

message UpdateContentRequest {
  string id = 1;
  string text = 2;
  bool is_vectorized = 3;
  string qdrant_id = 4;
  string embedding_model = 5;
  string ai_analysis_json = 6;
  string status = 7;
}

message GetLastContentForSourceRequest {
  string source_id = 1;
}

message UpsertContentVectorRequest {
  string content_id = 1;
  repeated float vector = 2;    // Embedding (1536 floats for OpenAI)
  string summary = 3;           // For payload/search
  string category = 4;          // For filtering
  string language = 5;          // For filtering
}

message UpsertContentVectorResponse {
  string qdrant_id = 1;
  bool success = 2;
}


// --- SOURCE ---

message SourceResponse {
  string id = 1;
  string type = 2;              // telegram, twitter, rss
  string external_id = 3;       // numeric ID for telegram
  string name = 4;
  string description = 5;
  string avatar_url = 6;
  string url = 7;
  bool is_active = 8;
  string language = 9;
  string metadata_json = 10;    // JSON with additional data (username for TG, etc.)
  string last_sync_at = 11;
  string created_at = 12;
  string updated_at = 13;
}

message GetSourceRequest {
  string id = 1;
}

message GetSourceByExternalIdRequest {
  string type = 1;
  string external_id = 2;
}

message ListSourcesRequest {
  int32 limit = 1;
  int32 offset = 2;
  string type = 3;              // filter by type
  bool active_only = 4;         // filter only active
}

message ListSourcesResponse {
  repeated SourceResponse items = 1;
  int32 total = 2;
}

message CreateSourceRequest {
  string type = 1;              // telegram, twitter, rss
  string external_id = 2;       // numeric ID
  string name = 3;
  string description = 4;
  string avatar_url = 5;
  string url = 6;
  string language = 7;
  string metadata_json = 8;     // JSON
}

message UpdateSourceRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string avatar_url = 4;
  string url = 5;
  bool is_active = 6;
  string language = 7;
  string metadata_json = 8;
  string last_sync_at = 9;
}

message DeleteSourceRequest {
  string id = 1;
}

message SetSourceActiveRequest {
  string id = 1;
  bool is_active = 2;
}

// --- TOPIC ---

message TopicResponse {
  string id = 1;
  string type = 2;
  string title = 3;
  string summary = 4;
  string language = 5;
  string category_id = 6;
  int32 version = 7;
  double relevance_score = 8;
  bool is_expired = 9;
  string created_at = 10;
  string updated_at = 11;
}

message GetTopicRequest {
  string id = 1;
}

message ListTopicsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string type = 3;
  string category_id = 4;
  bool only_active = 5; // if true, excludes expired
}

message ListTopicsResponse {
  repeated TopicResponse items = 1;
  int32 total = 2;
}

message CreateTopicRequest {
  string type = 1;
  string title = 2;
  string summary = 3;
  string language = 4;
  string category_id = 5;
  string embedding_model = 6;
  string qdrant_id = 7;
}

message UpdateTopicRequest {
  string id = 1;
  string title = 2;
  string summary = 3;
  int32 version = 4;
  double relevance_score = 5;
  bool is_expired = 6;
  string embedding_model = 7;
  string qdrant_id = 8;
  string qdrant_id_to_null = 9; // Special flag to clear qdrant_id
}

message AddContentToTopicRequest {
  string topic_id = 1;
  string content_id = 2;
  bool is_primary = 3;
}

// --- PUBLICATION ---

message PublicationResponse {
  string id = 1;
  string workspace_topic_id = 2;
  string target_id = 3;
  string status = 4;
  int32 topic_version = 5;
  string scheduled_at = 6;
  string published_at = 7;
  string external_id = 8;
  string error = 9;
  int32 retry_count = 10;
  string next_retry_at = 11;
  string created_at = 12;
}

message GetPublicationRequest {
  string id = 1;
}

message ListPublicationsRequest {
  int32 limit = 1;
  int32 offset = 2;
  string status = 3;
  string target_id = 4;
  bool only_due = 5; // Get only pending/scheduled that are due now
}

message ListPublicationsResponse {
  repeated PublicationResponse items = 1;
  int32 total = 2;
}

message CreatePublicationRequest {
  string workspace_topic_id = 1;
  string target_id = 2;
  int32 topic_version = 3;
  string scheduled_at = 4; // ISO string
  string content_override_json = 5;
}

message UpdatePublicationStatusRequest {
  string id = 1;
  string status = 2;
  string error = 3;
  string external_id = 4;
  string published_at = 5;
  int32 retry_count = 6;
  string next_retry_at = 7;
}

// --- AI LOG ---

message AiLogResponse {
  string id = 1;
  bool success = 2;
}

message CreateAiLogRequest {
  string agent_id = 1;
  string resource_type = 2;
  string resource_id = 3;
  string prompt = 4;
  string response = 5;
  int32 input_tokens = 6;
  int32 output_tokens = 7;
  int32 latency_ms = 8;
  double cost = 9;
  bool success = 10;
  string error = 11;
}

// --- SEARCH ---

message SearchSimilarRequest {
  repeated float vector = 1;
  int32 limit = 2;
  float min_score = 3; // 0.0 to 1.0 (e.g. 0.85)
}

message SearchResultItem {
  string id = 1; // Content ID or Topic ID
  string text = 2; // Preview text
  float score = 3;
}

message SearchSimilarResponse {
  repeated SearchResultItem items = 1;
}

// --- USER (Auth) ---

message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  string password_hash = 4;
  bool is_active = 5;
  string role = 6; // FATHER, ADMIN, USER, EDITOR
  string telegram_id = 7;
  string telegram_username = 8;
  string avatar_url = 9;
  string refresh_token_hash = 10;
  string created_at = 11;
  string updated_at = 12;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password_hash = 3;
  string role = 4; // FATHER, ADMIN, USER, EDITOR
}

message UpdateUserRefreshTokenRequest {
  string id = 1;
  string refresh_token_hash = 2; // empty string to clear
}

message CountUsersRequest {}

message CountUsersResponse {
  int32 count = 1;
}

// --- WORKSPACE ---

message WorkspaceResponse {
  string id = 1;
  string name = 2;
  string owner_id = 3;
  string settings_json = 4;
  string created_at = 5;
  string updated_at = 6;
}

message WorkspaceUserResponse {
  string id = 1;
  string workspace_id = 2;
  string user_id = 3;
  string role = 4; // ADMIN, EDITOR, VIEWER
  string user_email = 5;
  string user_name = 6;
  string created_at = 7;
}

message GetWorkspaceRequest {
  string id = 1;
}

message ListWorkspacesRequest {
  string user_id = 1; // List workspaces where user is owner or member
}

message ListWorkspacesResponse {
  repeated WorkspaceResponse workspaces = 1;
}

message CreateWorkspaceRequest {
  string name = 1;
  string owner_id = 2;
  string settings_json = 3;
}

message UpdateWorkspaceRequest {
  string id = 1;
  string name = 2;
  string settings_json = 3;
}

message DeleteWorkspaceRequest {
  string id = 1;
}

message AddWorkspaceUserRequest {
  string workspace_id = 1;
  string user_id = 2;
  string role = 3; // ADMIN, EDITOR, VIEWER
}

message RemoveWorkspaceUserRequest {
  string workspace_id = 1;
  string user_id = 2;
}

message ListWorkspaceUsersRequest {
  string workspace_id = 1;
}

message ListWorkspaceUsersResponse {
  repeated WorkspaceUserResponse users = 1;
}

// --- WORKSPACE DONOR ---

message WorkspaceDonorResponse {
  string id = 1;
  string workspace_id = 2;
  string source_id = 3;
  bool is_active = 4;
  string settings_json = 5;
  string created_at = 6;
  // Embedded source info for convenience
  string source_type = 7;
  string source_external_id = 8;
  string source_name = 9;
}

message AddWorkspaceDonorRequest {
  string workspace_id = 1;
  string source_id = 2;
  string settings_json = 3;
}

message RemoveWorkspaceDonorRequest {
  string workspace_id = 1;
  string source_id = 2;
}

message ListWorkspaceDonorsRequest {
  string workspace_id = 1;
  bool active_only = 2;
}

message ListWorkspaceDonorsResponse {
  repeated WorkspaceDonorResponse donors = 1;
}

message UpdateWorkspaceDonorRequest {
  string workspace_id = 1;
  string source_id = 2;
  bool is_active = 3;
  string settings_json = 4;
}

// --- TARGET ---

message TargetResponse {
  string id = 1;
  string workspace_id = 2;
  string type = 3;              // telegram, twitter, etc.
  string external_id = 4;       // channel id, @handle, etc.
  string name = 5;
  string description = 6;
  string language = 7;
  string timezone = 8;
  int32 max_posts_per_day = 9;
  int32 min_post_interval = 10; // minutes
  string settings_json = 11;
  string work_schedule_json = 12;
  string account_id = 13;
  bool is_active = 14;
  string metadata_json = 15;
  string created_at = 16;
  string updated_at = 17;
}

message GetTargetRequest {
  string id = 1;
}

message ListTargetsRequest {
  string workspace_id = 1;
  bool active_only = 2;
  string type = 3;              // filter by type
}

message ListTargetsResponse {
  repeated TargetResponse targets = 1;
  int32 total = 2;
}

message CreateTargetRequest {
  string workspace_id = 1;
  string type = 2;
  string external_id = 3;
  string name = 4;
  string description = 5;
  string language = 6;
  string timezone = 7;
  int32 max_posts_per_day = 8;
  int32 min_post_interval = 9;
  string settings_json = 10;
  string work_schedule_json = 11;
  string account_id = 12;
}

message UpdateTargetRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string language = 4;
  string timezone = 5;
  int32 max_posts_per_day = 6;
  int32 min_post_interval = 7;
  string settings_json = 8;
  string work_schedule_json = 9;
  string account_id = 10;
  bool is_active = 11;
  string metadata_json = 12;
}

message DeleteTargetRequest {
  string id = 1;
}

message Empty {}

